--- a/Friendsbook/Friendsbook/Friendsbook.csproj
+++ b/Friendsbook/Friendsbook/Friendsbook.csproj
@@ -52,4 +52,8 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\Friendsbook.Core\Friendsbook.Core.csproj" />
+	</ItemGroup>
+
 </Project>
