started work, have a create and start of detail, main screen filled

--- a/Friendsbook/Friendsbook.Core/Friendsbook.Core.csproj
+++ b/Friendsbook/Friendsbook.Core/Friendsbook.Core.csproj
@@ -21,4 +21,8 @@
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\Friendsbook.Persistence\Friendsbook.Persistence.csproj" />
+	</ItemGroup>
+
 </Project>
