changed validation to use ObservableValidator

--- a/Friendsbook/Friendsbook.Core/Friendsbook.Core.csproj
+++ b/Friendsbook/Friendsbook.Core/Friendsbook.Core.csproj
@@ -25,4 +25,8 @@
 	  <ProjectReference Include="..\Friendsbook.Persistence\Friendsbook.Persistence.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="ValidationModels\" />
+	</ItemGroup>
+
 </Project>
