--- a/Friendsbook/Friendsbook/Friendsbook.csproj
+++ b/Friendsbook/Friendsbook/Friendsbook.csproj
@@ -61,6 +61,7 @@
 		<PackageReference Include="CommunityToolkit.Maui" Version="5.2.0" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+		<PackageReference Include="System.Runtime.InteropServices.NFloat.Internal" Version="6.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
