--- a/Friendsbook/Friendsbook/Platforms/MacCatalyst/Info.plist
+++ b/Friendsbook/Friendsbook/Platforms/MacCatalyst/Info.plist
@@ -26,5 +26,13 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
+
+	<!-- Taking images -->
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs access to the camera to take photos.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This app needs access to the photo gallery for picking photos.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs access to photos gallery for picking photos.</string>
 </dict>
 </plist>
