--- a/FinalProject/FinalProject/FinalProject.csproj
+++ b/FinalProject/FinalProject/FinalProject.csproj
@@ -49,6 +49,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Fonts\Aloha.ttf" />
 	  <None Remove="Resources\Fonts\Roboto-Bold.ttf" />
 	  <None Remove="Resources\Fonts\Roboto-BoldItalic.ttf" />
 	  <None Remove="Resources\Fonts\Roboto-Italic.ttf" />
@@ -58,6 +59,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AlohaKit" Version="1.0.74" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
 		<PackageReference Include="Material.Components.Maui" Version="0.1.2-beta" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
@@ -66,6 +68,12 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\FinalProject.Core\FinalProject.Core.csproj" />
 	  <ProjectReference Include="..\FinalProject.Persistence\FinalProject.Persistence.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Resources\Styles\OverrideStyles.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
