--- a/FinalProject/FinalProject/FinalProject.csproj
+++ b/FinalProject/FinalProject/FinalProject.csproj
@@ -60,6 +60,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="AlohaKit" Version="1.0.74" />
+		<PackageReference Include="CommunityToolkit.Maui" Version="5.2.0" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
 		<PackageReference Include="Material.Components.Maui" Version="0.1.2-beta" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
