--- a/FinalProject/FinalProject/FinalProject.csproj
+++ b/FinalProject/FinalProject/FinalProject.csproj
@@ -66,9 +66,12 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.5" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+		<PackageReference Include="Shiny.BluetoothLE" Version="3.0.0-beta-0124" />
+		<PackageReference Include="Shiny.Hosting.Maui" Version="3.0.0-beta-0124" />
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\FinalProject.Communication\FinalProject.Communication.csproj" />
 	  <ProjectReference Include="..\FinalProject.Core\FinalProject.Core.csproj" />
 	  <ProjectReference Include="..\FinalProject.Persistence\FinalProject.Persistence.csproj" />
 	</ItemGroup>
