--- a/FinalProject/FinalProject.Core/FinalProject.Core.csproj
+++ b/FinalProject/FinalProject.Core/FinalProject.Core.csproj
@@ -21,6 +21,7 @@
 	  <PackageReference Include="AlohaKit" Version="1.0.74" />
 	  <PackageReference Include="CommunityToolkit.Maui" Version="5.2.0" />
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
+	  <PackageReference Include="RestSharp" Version="110.2.0" />
 	</ItemGroup>
 
 	<ItemGroup>
