--- a/FinalProject/FinalProject.Core/FinalProject.Core.csproj
+++ b/FinalProject/FinalProject.Core/FinalProject.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<LangVersion>latest</LangVersion>
@@ -24,6 +24,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\FinalProject.Communication\FinalProject.Communication.csproj" />
 	  <ProjectReference Include="..\FinalProject.Persistence\FinalProject.Persistence.csproj" />
 	</ItemGroup>
 
