--- a/FinalProject/FinalProject.Persistence/FinalProject.Persistence.csproj
+++ b/FinalProject/FinalProject.Persistence/FinalProject.Persistence.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
 	  <LangVersion>latest</LangVersion>
@@ -18,6 +18,10 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FinalProject.Data\FinalProject.Data.csproj" />
   </ItemGroup>
 
 </Project>
