--- a/FinalProject/FinalProject/FinalProject.csproj
+++ b/FinalProject/FinalProject/FinalProject.csproj
@@ -72,6 +72,7 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\FinalProject.Communication\FinalProject.Communication.csproj" />
 	  <ProjectReference Include="..\FinalProject.Core\FinalProject.Core.csproj" />
+	  <ProjectReference Include="..\FinalProject.Data\FinalProject.Data.csproj" />
 	  <ProjectReference Include="..\FinalProject.Persistence\FinalProject.Persistence.csproj" />
 	</ItemGroup>
 
