fixed pha, airquality, and disconnect

--- a/FinalProject/FinalProject.Core.Test/FinalProject.Core.Test.csproj
+++ b/FinalProject/FinalProject.Core.Test/FinalProject.Core.Test.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="..\FinalProject.Core\FinalProject.Core.csproj" />
     <ProjectReference Include="..\FinalProject.Data\FinalProject.Data.csproj" />
+    <ProjectReference Include="..\FinalProject.Test.Helper\FinalProject.Test.Helper.csproj" />
   </ItemGroup>
 
 </Project>
